feat(webserver): 添加用户管理功能并优化数据库连接
- 新增用户添加和获取接口
- 实现数据库连接和会话管理- 优化蓝图注册流程
- 调整日志输出格式

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ requires-python = ">=3.13"  # 最低Python版本要求
 # 项目依赖项
 dependencies = [
     # Web 框架
-    "flask>=3.1.0,<4.0.0"  # Flask框架，用于构建Web应用
+    "flask>=3.1.0,<4.0.0",  # Flask框架，用于构建Web应用
+    "sqlalchemy>=2.0.0,<3.0.0",  # SQLAlchemy ORM框架
+    "pymysql>=1.1.0,<2.0.0"  # MySQL数据库驱动
 ]
 
 # Poetry打包配置
