feat(user): 添加用户更新功能并优化数据库操作
- 在 modulewebcontroller.py 中添加更新用户信息的路由处理函数
- 在 userservice.py 中实现更新用户信息的业务逻辑
- 优化 dbconfiguration.py 中的数据库会话管理
- 在 project_rule.md 中添加 Flask应用开发的最佳实践规则

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     # Web 框架
     "flask>=3.1.0,<4.0.0",  # Flask框架，用于构建Web应用
     "sqlalchemy>=2.0.0,<3.0.0",  # SQLAlchemy ORM框架
-    "pymysql>=1.1.0,<2.0.0"  # MySQL数据库驱动
+    "pymysql>=1.1.0,<2.0.0",  # MySQL数据库驱动
+    "click (==8.2.0)"
 ]
 
 # Poetry打包配置
